[package]
name = "unison"
version = "0.1.0"
edition = "2021"

[dependencies]
unison-backend = { path = "../unison-backend" }
unison-backend-wgpu = { path = "../unison-backend-wgpu" }

winit = "0.28.5"
thiserror = "1.0"
paste = "1.0.12"
smallvec = "1.10.0"

cosmic-text = "0.8.0"
image = "0.24.6"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
